<resources>
    <string name="app_name">Currency Rate Changer</string>
    <string name="edt_getnumber">Enter Number</string>
    <string name="edt_setnumber">Result</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_back">Back</string>
    <string name="btn_cal">Calculate</string>
    <string name="txt_history">History</string>
    <string name="menu_search">search name, symbol</string>
    <string name="processDialog">Please waiting for download data from server...</string>
    <string name="errorDialog">Errors , please check your internet connection and retry!</string>
    <string name="invalidNumber">Number is not null, invalid!</string>
    <string name="reverse">Reverse</string>
</resources>
